GNOME Bugzilla – Bug 740003
pad: fail drop queries
Last modified: 2014-11-12 14:07:16 UTC
Created attachment 290501 [details] [review] drop failed queries Previously, dropping a query from a pad probe would deem the query succeeded, and the caller might then assume the query's results are valid, and thus dereference an invalid object such as a GstCaps. We now assume dropped queries did not succeed. Dropped events and buffers are still deemed a success. This patch might break expectations from some client code (ie, failure causing something upstream to stop the pipeline) ?
commit d4c551a29250723c44a5de8283c46db63b1932f5 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Mon Nov 3 17:46:57 2014 +0000 pad: fail dropped queries Previously, dropping a query from a pad probe would deem the query succeeded, and the caller might then assume the query's results are valid, and thus dereference an invalid object such as a GstCaps. We now assume dropped queries did not succeed. Dropped events and buffers are still deemed a success. Added back after previous revert, as it's been double checked. https://bugzilla.gnome.org/show_bug.cgi?id=740003